United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6988018 dtrace/hotspot/MethodInvocation/MethodInvocation002 crashes with client compiler
6988018 : dtrace/hotspot/MethodInvocation/MethodInvocation002 crashes with client compiler

Details
Type:
Bug
Submit Date:
2010-09-28
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
solaris
Sub-Component:
compiler
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs18
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
dtrace/hotspot/MethodInvocation/MethodInvocation002 crashes with SIGSEGV when running with 
"-client -Xmixed -XX:CompileThreshold=50".

This test traces the following probes:
   hotspot:::method-entry
   hotspot:::methid-exit
   hotspot:::thread-start
   hotspot:::thread-stop

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/a3f7f95b0165
                                     
2010-10-09
EVALUATION

http://hg.openjdk.java.net/hsx/hsx19/baseline/rev/c53baab9d988
                                     
2010-10-08
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/a3f7f95b0165
                                     
2010-10-05
EVALUATION

6988018: dtrace/hotspot/MethodInvocation/MethodInvocation002 crashes with client compiler
Reviewed-by: iveresov, kvn, kamg

While rearranging code in 6939930 I started passing the wrong number
of arguments to the dtrace_method_exit probes resulting a crash.  The
fix is to pass the thread in addition to the method.  Tested with
failing test case.
                                     
2010-10-05



Hardware and Software, Engineered to Work Together