6988018: dtrace/hotspot/MethodInvocation/MethodInvocation002 crashes with client compiler

Reviewed-by: iveresov, kvn, kamg